--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,10 +32,10 @@
     "react-dom": "https://esm.sh/react-dom@18.2.0",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "mongoose": "https://esm.sh/mongoose@^9.1.2",
-    "node-cron": "https://esm.sh/node-cron@^4.2.1",
     "express": "https://esm.sh/express@^5.2.1",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "cors": "https://esm.sh/cors@^2.8.5",
-    "dotenv": "https://esm.sh/dotenv@^17.2.3"
+    "node-cron": "https://esm.sh/node-cron@^4.2.1"
   }
 }
 </script>
