--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,7 +35,9 @@
     "express": "https://esm.sh/express@^5.2.1",
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "cors": "https://esm.sh/cors@^2.8.5",
-    "node-cron": "https://esm.sh/node-cron@^4.2.1"
+    "node-cron": "https://esm.sh/node-cron@^4.2.1",
+    "express-serve-static-core": "https://esm.sh/express-serve-static-core@^0.1.1",
+    "xlsx": "https://esm.sh/xlsx@0.18.5"
   }
 }
 </script>
